Fix bug#53499 - purge thread is active during shutdown, assert buf/buf0buf.c line 4115.

Check that all background threads are suspended or shutdown instead of just
checking for the master thread.
rb://333